unpackaged/main/default/objects/LoanApplicationProperty/LoanApplicationProperty.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>