unpackaged/main/default/objects/LoanApplicationProperty/fields/Amended_Baths__c.field-meta.xml
<CustomField>
    <fullName>Amended_Baths__c</fullName>
    <label>Amended Baths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>