unpackaged/main/default/objects/LoanApplicationProperty/fields/Amended_Beds__c.field-meta.xml
<CustomField>
    <fullName>Amended_Beds__c</fullName>
    <label>Amended Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>