unpackaged/main/default/objects/LoanApplicationProperty/fields/Amended_CarSpaces__c.field-meta.xml
<CustomField>
    <fullName>Amended_CarSpaces__c</fullName>
    <label>Amended CarSpaces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>