unpackaged/main/default/objects/LoanApplicationProperty/fields/EstimatedPropertyValue__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPropertyValue__c</fullName>
    <label>EstimatedPropertyValue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>