unpackaged/main/default/objects/LoanApplicationProperty/fields/External_ID_LAP__c.field-meta.xml
<CustomField>
    <fullName>External_ID_LAP__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Used for UUID from Postgres to Salesforce via Heroku Connect</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for UUID from Postgres to Salesforce via Heroku Connect</inlineHelpText>
    <label>External ID LAP</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>