unpackaged/main/default/objects/LoanApplicationProperty/fields/isCalculatedLandArea__c.field-meta.xml
<CustomField>
    <fullName>isCalculatedLandArea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCalculatedLandArea</label>
    <type>Checkbox</type>
</CustomField>