unpackaged/main/default/objects/LoanApplicationProperty/fields/landArea__c.field-meta.xml
<CustomField>
    <fullName>landArea__c</fullName>
    <inlineHelpText>Land area of the property in square metres.</inlineHelpText>
    <label>Original landArea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>