unpackaged/main/default/objects/LoanApplicationProperty/fields/Last_Valuation_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Valuation_Time_Stamp__c</fullName>
    <label>Last Valuation Time Stamp</label>
    <type>DateTime</type>
</CustomField>