unpackaged/main/default/objects/LoanApplicationProperty/fields/Original_landAreaSource__c.field-meta.xml
<CustomField>
    <fullName>Original_landAreaSource__c</fullName>
    <label>Original landAreaSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>