unpackaged/main/default/objects/LoanApplicationProperty/fields/Original_lockUpGarages__c.field-meta.xml
<CustomField>
    <fullName>Original_lockUpGarages__c</fullName>
    <label>Original lockUpGarages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>