unpackaged/main/default/objects/LoanApplicationProperty/fields/Valuation_Status__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Status__c</fullName>
    <label>Valuation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Desktop Valuation</fullName>
            </value>
            <value>
                <fullName>Full Valuation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>