unpackaged/main/default/objects/LoanApplicationProperty/validationRules/Max_Property_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_Property_Validation</fullName>
    <active>true</active>
    <description>Associated property can't be more than one</description>
    <errorConditionFormula>ISNEW()  &amp;&amp; LoanApplication.Number_of_Property__c  &gt; 0</errorConditionFormula>
    <errorMessage>An application can have only one property associated with it.</errorMessage>
</ValidationRule>