unpackaged/main/default/objects/LoanApplicationProperty/listViews/All_LoanApplicationProperties.listView-meta.xml
<ListView>
    <fullName>All_LoanApplicationProperties</fullName>
    <filterScope>Everything</filterScope>
    <label>All Loan Application Properties</label>
</ListView>